[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/item_container.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/screens/dialog/equipment_selector.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/panel_equipment_info.tscn" type="PackedScene" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ItemContainer" parent="." instance=ExtResource( 1 )]

[node name="InfoPanel" parent="." instance=ExtResource( 3 )]
visible = false
anchor_left = 0.7
sellable = false

[node name="ScrollContainer" parent="InfoPanel" index="0"]
margin_top = 10.0

[node name="VBoxContainer" parent="InfoPanel/ScrollContainer" index="0"]
margin_bottom = 184.0

[node name="Control" parent="InfoPanel/ScrollContainer/VBoxContainer" index="0"]
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )

[node name="Name" parent="InfoPanel/ScrollContainer/VBoxContainer" index="1"]
margin_top = 132.0
margin_bottom = 180.0

[node name="StatList" parent="InfoPanel/ScrollContainer/VBoxContainer" index="2"]
margin_top = 184.0
margin_bottom = 184.0

[connection signal="item_selected" from="ItemContainer" to="." method="_on_ItemContainer_item_selected"]

[editable path="InfoPanel"]
